--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
           <h1 id="hero-title">Coding Awareness Workshop 2025</h1>
           <p class="subtitle">Hosted by CDD Club and Startup Club</p>
           <p class="meta">
-            <span class="meta-item">Date: <strong>March 15, 2025</strong></span>
+            <span class="meta-item">Date: <strong>September 6, 2025 - September 13, 2025</strong></span>
             <span class="meta-sep">•</span>
             <span class="meta-item">Venue: <strong>Hybrid mode</strong></span>
           </p>
           <div class="hero-cta">
             <a href="#agenda" class="btn btn-ghost">View agenda</a>
+            <a href="CAW-2025 Schedule.pdf" class="btn btn-ghost" download>Download Brochure</a>
             <button type="button" class="btn" data-action="register">Register</button>
           </div>
         </div>
@@ -98,7 +99,7 @@
         <span class="brand-acronym">CAW</span>
         <span>2025</span>
       </div>
-      <p class="fineprint">Organized by CDD Club × Startup Club • © 2025</p>
+      <p class="fineprint">Organized by CDD Club × Startup Club • © MR DASH 2025</p>
       <a href="#home" class="back-to-top" aria-label="Back to top">↑</a>
     </div>
   </footer>
