--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <h1 id="hero-title">Coding Awareness Workshop 2025</h1>
           <p class="subtitle">Hosted by CDD Club and Startup Club</p>
           <p class="meta">
-            <span class="meta-item">Date: <strong>September 6, 2025 - September 13, 2025</strong></span>
+            <span class="meta">Date: <strong>September 6, 2025 - September 13, 2025</strong></span>
             <span class="meta-sep">•</span>
-            <span class="meta-item">Venue: <strong>Hybrid mode</strong></span>
+            <span class="meta">Venue: <strong>Hybrid mode</strong></span>
           </p>
           <div class="hero-cta">
             <a href="#agenda" class="btn btn-ghost">View agenda</a>
