--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </p>
           <div class="hero-cta">
             <a href="#agenda" class="btn btn-ghost">View agenda</a>
-            <a href="CAW-2025 Schedule.pdf" class="btn btn-ghost" download>Download Brochure</a>
+            <a href="CAW-2025 Schedule.pdf" class="btn btn-ghost" download> Brochure</a>
             <button type="button" class="btn" data-action="register">Register</button>
           </div>
         </div>
