--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
     <section class="hero" aria-labelledby="hero-title">
       <div class="container hero-inner">
         <div class="hero-copy">
+          <p class="subtitle">Idea Innovation Cell Presents</p>
           <h1 id="hero-title">Coding Awareness Workshop 2025</h1>
-          <p class="subtitle">Hosted by CDD Club and Startup Club</p>
+          <p class="subtitle">Organized by CDD Club and Startup Club</p>
           <p class="meta">
-            <span class="meta">Date: <strong>September 6, 2025 - September 13, 2025</strong></span>
+            <span class="meta">Date: <strong>6th September - 13th September ,2025</strong></span>
             <span class="meta-sep">•</span>
             <span class="meta">Venue: <strong>Hybrid mode</strong></span>
           </p>
@@ -67,7 +68,6 @@
           <span class="pill">Hands-on labs</span>
           <span class="pill">Beginner friendly</span>
           <span class="pill">Career pathways</span>
-          <span class="pill">Startup case studies</span>
         </div>
       </div>
     </section>
