--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="hero-card" role="img" aria-label="Illustration representing coding and startups">
-          <img class="hero-cta"src="CAW.png" alt="Coding Awareness Workshop 2025 poster" />
+          <img class="hero-cta"src="image.png" alt="Coding Awareness Workshop 2025 poster" />
         </div>
       </div>
     </section>
